5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1759_2108.log
== TEST (2019-05-29 21:37:01) 
-- CODE:
s = input("palavra").lower

s =  s.replace("r", "p")

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    s =  s.replace("r", "p")
AttributeError: 'builtin_function_or_method' object has no attribute 'replace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:37:45) 
-- CODE:
from numpy import*

s = input("palavra:").lower

s =  s.replace("r", "p")

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:38:06) 
-- CODE:
from numpy import*

s = input("palavra:").lower

s.replace("r", "p")

print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:40:25) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0

while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
	elif:
		s[i] = p
	i = i + 1
print(s)
-- ERROR:
File "XXXX", line 9
    elif:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:40:43) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0

while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
	
	else
		s[i] = p
	i = i + 1
print(s)
-- ERROR:
File "XXXX", line 10
    else
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:40:59) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0

while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
	
	else:
		s[i] = p
	i = i + 1
print(s)
-- ERROR:
File "XXXX", line 10
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 21:41:28) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0
while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
		v = v + 1
	else:
		s[i] = p
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:10:16) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0
while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:06:57) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0
while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:07:36) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0
a = len(s)
while (i < a):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:13) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0
s = int

while (i < size(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or s[i] == " "):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:30) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0
s = int

while (i < size(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or ):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
File "XXXX", line 10
    if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or ):
                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:45) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while (i < size(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or ):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
File "XXXX", line 10
    if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" or ):
                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:08:52) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while (i < size(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		v = v + 1
	else:
		s[i] = "p"
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:12:20) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		newv = v.replace + 1
	else:
		newv = v.replace(v[i], "p")
	i = i + 1
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:13:57) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		
	else:
		newv = v.replace(v[i], "p")
	i = i + 1
print(newv)
-- ERROR:
File "XXXX", line 12
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:04) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		
	else:
		newv = v.replace(v[i], "p")
	i = i + 1
print(newv)
-- ERROR:
File "XXXX", line 12
    else:
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:16) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		v = v + 1
	else:
		newv = v.replace(v[i], "p")
	i = i + 1
print(newv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:14:38) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0

print(len(s))
while (i < len(s)):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		v = v + 1
	else:
		newv = v.replace(v[i], "p")
	i = i + 1
print(newv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:21) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0


while i < len(s):
	if (s[i] == "a" or s[i] == "e" or s[i] =="i" or s[i] == "o" or s[i] == "u" ):
		v = v + 1
	else:
		newv = v.replace(v[i], "p")
	i = i + 1
print(newv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:16:47) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0



newv = v.replace(v[i], "p")
i = i + 1
print(newv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:17:16) 
-- CODE:
from numpy import*

s = input("palavra:").lower

i = 0
v = 0



newv = v.replace("a", "p")
i = i + 1
print(newv)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 10:26:24) 
-- CODE:
from numpy import*

dna = input("Sequencia DNA: ").upper()
# Cria string vazia
copia = ""
i = 0 # inicia contador
while i < len(dna):
	if dna[i] == 'A':
		copia = copia + 'T'
	elif dna[i] == 'C':
		copia = copia + 'G'
	elif dna[i] == 'G':
		copia = copia + 'C'
	elif dna[i] == 'T':
		copia = copia + 'A'
	i = i + 1 # incrementa contador
print(copia)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
